--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <template id="movie_card">
         <div class="col mb-4">
             <div class="card h-100">
-                <img  src="./images/img1.jpg" class="card-img-top" style="max-height: 200px; object-fit: cover; object-position: center;" alt="...">
+                <img  src="./images/netlifix.jpg" class="card-img-top" style="max-height: 200px; object-fit: cover; object-position: center;" alt="...">
                 <div class="card-body">
                     <h4 class="card-title text-truncate card__heading" style="max-width: 100%;">Card title sfjksjadf dsfhxgdf dfh gfhgfh fjf jgfjfgj gdsf sdf</h4>
                     
